syntax = "proto3";
import "Protos/shared_messages.proto";
option csharp_namespace = "Client.ChatApp.Protos";
package contacts_pkg;

service ContactRPCs{
	rpc IsInContacts(ContactMsg) returns(ContactResult);
	rpc GetContacts(Shared.Empty) returns(ContactItems);
	rpc Remove(Shared.RowMsg) returns(ContactResult);
}

message ContactMsg{
	string ProfileId = 1;
}

message ContactItems{
	repeated ContactItem Items = 1;
}
message ContactItem{
	string ContactId = 1;
    string UserId = 2;
    string DisplayName =3;    
    string ContactedAt = 4;
    string ImageUrl = 5 ;
}

message ContactResult {
	bool IsSuccessful = 1;
	repeated Shared.MessageInfo Messages = 2;
	ContactInfo ContactInfo = 3;
	string ChatRequestId = 4;
}
message ContactInfo{
	string UserId = 1;
	string ImageUrl = 2;
	string Description = 3;
}