syntax = "proto3";
option csharp_namespace = "Client.ChatApp.Protos";
package Shared;

service SharedRpcs{
	rpc shared(Empty) returns(Empty);
}

message Empty{

}
message MessageInfo{
	string Code = 1;
	string Description = 2;
	string Type = 3;
}

message ResultMsg{
	bool IsSuccessful = 1;
	repeated MessageInfo Messages = 2;
}

message UsersConnection {
	string ReceiverId = 1;
	string RequesterId = 2;
}

message UserMsg {
	string UserId = 1;
}

message RowMsg{
	string RowId = 1;
}

message PersonMsg{
	string Id = 1;
}

message UserBasicInfoMsg{
	string Id = 1;
	string ProfileId = 2;
	string DisplayName = 3;
	string ImageUrl = 4;
    bool IsOpenToChat = 5;
}

message OnlineUserMsg{
	UserBasicInfoMsg BasicInfo = 1;
	bool IsOnline = 2;
	bool IsInContacts = 3;
}